Fixed whoareyou background color and spacing.

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -69,6 +69,9 @@
     color:white;
 }
 
+.bg-darkgrey{
+    background: #2c2f31;
+}
 
 footer{
     width: 100%;
